Update HTML freecodecamp

--- a/html-freecodecamp.html
+++ b/html-freecodecamp.html
@@ -64,9 +64,10 @@
                 <label for="email1" class="form-example">Enter your email: </label>
                 <input type="email" name="email1" required class="form-example">
                 <input type="submit" name="" required class="form-example" value="Suscribe!">
+                <button type="submit" name="button-submit" required class="form-example">Suscribe!</button>
             </form>
         </div>
-        
+
     
     </div>
 
